@@ -7,6 +7,7 @@ import com.app.folioman.shared.MFSchemeProjection;
 import com.app.folioman.shared.MfSchemeService;
 import com.app.folioman.shared.UserSchemeDetailService;
 import java.util.List;
+import java.util.Objects;
 import java.util.Optional;
 import java.util.concurrent.CompletableFuture;
 import org.slf4j.Logger;
@@ -43,22 +44,19 @@ class UserSchemeDetailsServiceDelegate implements UserSchemeDetailService {
                 List<MFSchemeProjection> mfSchemeEntityList =
                         mfSchemeService.fetchSchemesByRtaCode(rtaCode.substring(0, rtaCode.length() - 1));
                 if (!mfSchemeEntityList.isEmpty()) {
-                    if (userSchemeDetailsEntity.getIsin() != null) {
-                        for (MFSchemeProjection mfSchemeProjection : mfSchemeEntityList) {
-                            if (mfSchemeProjection.getIsin().equals(userSchemeDetailsEntity.getIsin())) {
-                                updateUserSchemeDetails(
-                                        userSchemeDetailsEntity.getId(),
-                                        mfSchemeProjection.getAmfiCode(),
-                                        mfSchemeProjection.getIsin());
-                                break;
-                            }
-                        }
-                    } else {
-                        log.debug("ISIN as well missing from user scheme details");
+                    Optional<MFSchemeProjection> matchingScheme = mfSchemeEntityList.stream()
+                            .filter(scheme -> Objects.equals(scheme.getIsin(), userSchemeDetailsEntity.getIsin()))
+                            .findFirst();
+
+                    if (matchingScheme.isPresent()) {
+                        MFSchemeProjection scheme = matchingScheme.get();
                         updateUserSchemeDetails(
-                                userSchemeDetailsEntity.getId(),
-                                mfSchemeEntityList.getFirst().getAmfiCode(),
-                                mfSchemeEntityList.getFirst().getIsin());
+                                userSchemeDetailsEntity.getId(), scheme.getAmfiCode(), scheme.getIsin());
+                    } else {
+                        log.debug("ISIN not found in the list of schemes");
+                        MFSchemeProjection firstScheme = mfSchemeEntityList.get(0);
+                        updateUserSchemeDetails(
+                                userSchemeDetailsEntity.getId(), firstScheme.getAmfiCode(), firstScheme.getIsin());
                     }
                 } else {
                     String scheme = userSchemeDetailsEntity.getScheme();
